<resources>
    <string name="app_name" translatable="false">YES备忘录</string>

    <!-- List of Authors -->
    <string name="name_kongqikill">kongqikill</string>
    <string name="name_yuandream">yuandream</string>
    
    <!-- List of open source -->
    <string name="name_github">Github</string>
    <string name="name_gitee">Gitee</string>

    <!-- Other -->
    <string name="main_notes_fragment_title_notes">Notes</string>
    <string name="main_notes_fragment_title_plans">Plans</string>
    <string name="main_notes_fragment_title_recording">Recording</string>
    <string name="imagebutton_title_more">More</string>
    <string name="button_back">Back</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="menu_main_more_titie_pgv">Palace Grid View</string>
    <string name="menu_main_more_titie_so">Sort Order</string>
    <string name="menu_main_more_titie_settings">Settings</string>
    <string name="text_basic_settings">Basic Settings</string>
    <string name="text_notification">Notification</string>
    <string name="text_note_watermark">Note Watermark</string>
    <string name="text_automatic_speech_to_text">Speech to text service</string>
    <string name="text_about_memo">About Memo</string>
    <string name="text_and">And</string>
    <string name="text_user_agreement">User Agreement</string>
    <string name="text_author">Author</string>
    <string name="text_developer">Developer</string>
    <string name="text_opens">open-source</string>
    <string name="text_github">https://github.com/YESmemo/YESmemo1</string>
    <string name="text_gitee">https://gitee.com/？</string>
    <string name="search_icon_description">Search</string>
    <string name="alertDialog_notesadapter_deleteItem_title">Confirm Delete</string>
    <string name="alertDialog_notesadapter_deleteItem_msg">Are you sure you want to delete this item?</string>
    <string name="alertDialog_notesadapter_Item_ok">OK</string>
    <string name="alertDialog_notesadapter_Item_cancel">Cancel</string>
    <string name="menu_notes_item_titie_pin">Pin</string>
    <string name="menu_notes_item_titie_rename">Rename</string>
    <string name="menu_notes_item_titie_delete">Delete</string>
    <string name="menu_notes_item_titie_properties">Properties</string>
    <string name="settings_title">Settings</string>
    <string name="settings_about_title">About Memo</string>
    <string name="menu_main_more_title_grid_view">Grid View</string>
    <string name="menu_main_more_title_list_view">List View</string>
    <string name="menu_notes_item_title_unpin">Unpin</string>
    <string name="menu_notes_item_title_pin">Pin</string>
    <string name="alertDialog_notesadapter_renameItem_msg">Please enter a new name.</string>
    <string name="alertDialog_notesadapter_attributeItem_title">Attribute</string>
    <string name="alertDialog_notesadapter_attributeItem_content_title">"Title"</string>
    <string name="alertDialog_notesadapter_attributeItem_content1">%s%s\nSubtitle%s\nContent%s\nEdittime%s\nCreatetime%s\nSticky Status%s</string>
    <string name="alertDialog_notesadapter_attributeItem_content_sticky">Sticky</string>
    <string name="valertDialog_notesadapter_attributeItem_content_notsticky">Not Sticky</string>
    <string name="alertDialog_notesadapter_attributeItem_content_title2">Subtitle</string>
    <string name="alertDialog_notesadapter_attributeItem_content_content">Content</string>
    <string name="alertDialog_notesadapter_attributeItem_content_edittime">"Edittime"</string>
    <string name="alertDialog_notesadapter_attributeItem_content_createtime">"Createtime"</string>
    <string name="alertDialog_notesadapter_attributeItem_content_pinned">"Sticky Status"</string>
    <string name="menu_main_more_titie_refresh">Refresh</string>
    <string name="imagebutton_title_switchtheme">Switch Theme</string>

</resources>